fixed right footer alignment

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -25,6 +25,13 @@
       position: fixed;
       bottom: 0;
   }
+  
+  #right-footer-img {
+    float: right;
+    padding-right: 10px;
+    padding-top: 10px;
+  }
+
   html {
     box-sizing: 'border-box'
   }
